# windowcharmer

./: .gitignore  LICENSE  README.md  fix_keymap.py  pyproject.toml  start_daemon.sh  tilew.py
windowcharmer/: __init__.py  key_grabber.py  key_monitor.py  sleep_detector.py  windowcharmer.py
