[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["windowcharmer"]

[project]
name = "windowcharmer"
version = "2024.3.1"
dependencies = [
  "python-xlib>=0.33"
]
requires-python = ">=3.8"
authors = [
  {name = "Chase Montgomery", email = "blufenix@blufenix.net"}
]
description = "A window tiler for ultra-wide monitors. Supports 3 columns."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["window", "tiler", "X", "Xlib", "columns", "cinnamon", "GTK", "Linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/BLuFeNiX/windowcharmer"
Documentation = "https://github.com/BLuFeNiX/windowcharmer"
Repository = "https://github.com/BLuFeNiX/windowcharmer"
"Bug Tracker" = "https://github.com/BLuFeNiX/windowcharmer/issues"

[project.scripts]
windowcharmer = "windowcharmer:main"
